#125 UX improvements from MacOS version now in this version.